2016-05-01  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Rename some enum values.

	* src/ftinspect.cpp, src/ftinspect.h: Updated.

2016-05-01  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Provide dummy default values for GUI initialization.

	* src/ftinspect.cpp (MainGUI::setDefaults): Set some values.

2016-05-01  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Add signal for showPointsCheckBox.

	* src/ftinspect.cpp (MainGUI::checkShowPoints): New function.
	(MainGUI::createConnections): Add signal.

	* src/ftinspect.h: Updated.

2016-05-01  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Add signal for antiAliasingComboBox.

	* src/ftinspect.cpp (MainGUI::checkAntiAliasing): New function.
	(MainGUI::createConnections): Add signal.

	* src/ftinspect.h: Updated.

2016-05-01  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Refine signal for hintingModeComboBox.

	* src/ftinspect.cpp (MainGUI::checkHintingMode): Grey out `slight'
	hinting item in antiAliasingComboBox if not in auto-hinting mode.
	Also set a different anti aliasing value for this case if `slight'
	was the current value.

	* src/ftinspect.h: Updated.

2016-05-01  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Add signal for hintingModeComboBox.

	Also fix typo `hortizontal' -> `horizontal'.

	* src/ftinspect.cpp (MainGUI::checkHintingMode): New function.
	(MainGUI::createConnections): Add signal.

	* src/ftinspect.h: Updated.

2016-05-01  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Improve combo box setup.

	* src/ftinspect.h (MainGUI): New enums `AntiAliasing',
	`HintingModes', and `LCDFilter'.

	* src/ftinspect.cpp (MainGUI::createLayout): Use new enums to set
	items in combo boxes.
	Also simplify computation of maximum width.

2016-04-30  Werner Lemberg  <wl@gnu.org>

	* src/ftinspect.cpp (MainGUI::createLayout): Fix memory leak.

2016-04-30  Werner Lemberg  <wl@gnu.org>

	[ftinspect] A new Qt based variant for ftgrid.  GUI draft only.

	The idea is to eventually integrate the functionality of ftview,