@@ -46,8 +46,8 @@ protected:
 
 private slots:
   void about();
-  void checkAntiAliasing(int);
-  void checkHintingMode(int);
+  void checkAntiAliasing();
+  void checkHintingMode();
   void checkShowPoints();
 
 private:
